[B][COLOR red]Update - v2.9.4 - June 1, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added a new Playlist Manager to context menu for none
    directory type list items.  You can add, remove, view playlist,
    and clear entire playlist.  For directory list items I added the
    playlist viewer and playlist clear options.  I suggest using
    the existing "Add to playlist" option for full shows and seasons[/I]

[B][COLOR red]Update - v2.9.3 - May 28, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Source list now utilizes multiline list items. Settings
    contain option to turn this on or off base on your preference.[/I]
[COLOR yellow]--[/COLOR][I] added a few more networks to TV Shows[/I]

[B][COLOR red]Update - v2.9.2 - May 22, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] added check for valid debrid account to sources.py. Code
    to remove duplicate links broke if no debrid account.[/I]
[COLOR yellow]--[/COLOR][I] added discart to movies from fanart.tv[/I]
[COLOR yellow]--[/COLOR][I] added Trakt "Box Office" to movies.[/I]
[COLOR yellow]--[/COLOR][I] added Navigation controls to settings page to
    turn off dupliacte movie and tv shows from IMDb, TMDb, and Trakt.
    May add more.[/I]
[COLOR yellow]--[/COLOR][I] added option to Tools menu to reset View Types to default.[/I]

[B][COLOR red]Update - v2.9.1 - May 19, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Switched startup notice from news to changelog. Should
   have been done in 2.9.0 but missed it.[/I]

[B][COLOR red]Update - v2.9.0 - May 19, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed typo from adding 4k artwork and killed off low res, fixed.[/I]
[COLOR yellow]--[/COLOR][I] Changed changelog file to be local and now using newsinfo
    file remotely to pass update info of what's in the works.[/I]

[B][COLOR red]Update - v2.8.9 - May 19, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed some broken artwork and studio info for TV Shows "Networks".[/I]