@@ -11,9 +11,9 @@
 		<setting id="navi.xmascollections" type="bool" label="40064" default="false" />
 		<setting id="newmovies.widget" type="enum" label="32320" lvalues="32302|32321|32322|32323|32324|32580" default="5" />
 		<setting id="mylists.widget" type="bool" label="32329" default="true" />
-		<setting label="My Movies" type="lsep" />
-		<setting id="sort.movies.type" type="enum" label="35190" lvalues="33564|33039|35187|35188|35391|35392|35393" default="0" />
-		<setting id="sort.movies.order" type="enum" label="33679" lvalues="33649|33650" default="0" subsetting="true" enable="!eq(-1,0)" />
+		<setting label="My Movies and Collections" type="lsep" />
+		<setting id="sort.movies.type" type="enum" label="35190" lvalues="33564|33039|35187|35188|35391|35392|35393" default="4" />
+		<setting id="sort.movies.order" type="enum" label="33679" lvalues="33649|33650" default="1" subsetting="true" enable="!eq(-1,0)" />
 	</category>
 
 <!-- Navigation - 1 -->
